// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component with random = 0 renders correctly with character Beth Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/4.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          BETH SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Beth Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(-200%) translateY(-100%) rotateZ(-40deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/4.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          BETH SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Jerry Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/5.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          JERRY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Jerry Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(-200%) translateY(-100%) rotateZ(-40deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/5.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          JERRY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Morty Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/2.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          MORTY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Morty Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(-200%) translateY(-100%) rotateZ(-40deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/2.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          MORTY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Rick Sanchez when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/1.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          RICK SANCHEZ
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Rick Sanchez when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(-200%) translateY(-100%) rotateZ(-40deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/1.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          RICK SANCHEZ
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Summer Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/3.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          SUMMER SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0 renders correctly with character Summer Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(-200%) translateY(-100%) rotateZ(-40deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/3.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          SUMMER SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Beth Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/4.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          BETH SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Beth Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(0%) translateY(0%) rotateZ(-20deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/4.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          BETH SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Jerry Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/5.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          JERRY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Jerry Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(0%) translateY(0%) rotateZ(-20deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/5.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          JERRY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Morty Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/2.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          MORTY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Morty Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(0%) translateY(0%) rotateZ(-20deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/2.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          MORTY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Rick Sanchez when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/1.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          RICK SANCHEZ
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Rick Sanchez when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(0%) translateY(0%) rotateZ(-20deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/1.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          RICK SANCHEZ
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Summer Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/3.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          SUMMER SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 0.5 renders correctly with character Summer Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(0%) translateY(0%) rotateZ(-20deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/3.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          SUMMER SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Beth Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/4.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          BETH SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Beth Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(200%) translateY(100%) rotateZ(0deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/4.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          BETH SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Jerry Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/5.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          JERRY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Jerry Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(200%) translateY(100%) rotateZ(0deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/5.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          JERRY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Morty Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/2.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          MORTY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Morty Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(200%) translateY(100%) rotateZ(0deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/2.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          MORTY SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Rick Sanchez when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/1.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          RICK SANCHEZ
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Rick Sanchez when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(200%) translateY(100%) rotateZ(0deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/1.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          RICK SANCHEZ
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Summer Smith when card is Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": "4px",
      "transform": "scale(1.5)",
      "zIndex": 2,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/3.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          SUMMER SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;

exports[`Card Component with random = 1 renders correctly with character Summer Smith when card is NOT Active 1`] = `
<div
  className="sc-bcXHqe krRkwL"
  data-cy="card"
  onClick={[Function]}
  style={
    Object {
      "padding": 0,
      "transform": "translateX(200%) translateY(100%) rotateZ(0deg) rotate3d(0, 1, 0, 180deg)",
      "zIndex": 0,
    }
  }
>
  <div
    className="sc-gswNZR jOlfhi"
    data-cy="front"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-card-1 css-bhp9pd-MuiPaper-root-MuiCard-root"
    >
      <div
        className="sc-eDvSVe bmdVZN"
        style={
          Object {
            "backgroundImage": "url(https://rickandmortyapi.com/api/character/avatar/3.jpeg)",
          }
        }
      />
      <div
        className="MuiCardContent-root makeStyles-cardContent-3 css-46bh2p-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-h2 makeStyles-title1-4 css-1sra7t5-MuiTypography-root"
        >
          SUMMER SMITH
        </p>
      </div>
      <div
        className="MuiTypography-root MuiTypography-body1 makeStyles-titleStatus-5 css-ahj2mt-MuiTypography-root"
      />
    </div>
  </div>
  <div
    className="sc-dkrFOg gLzyfx"
    data-cy="back"
  >
    <img
      className="sc-hLBbgP jbwjZl"
      src="/assets/card-back-face.jpg"
    />
  </div>
</div>
`;
